--- a/src/styles/_components.scss
+++ b/src/styles/_components.scss
@@ -11,7 +11,7 @@
 
 .table-wrapper {
   position: relative;
-  overflow-x: auto;
+  overflow-x: clip;
 }
 
 table {
@@ -37,4 +37,73 @@ td {
 
 tr > td:not(:first-child) {
   text-align: center;
+}
+
+.tooltip {
+  position: relative;
+
+  &::after {
+    position: absolute;
+    top: 50%;
+    left: 100%;
+    z-index: 9999;
+    min-width: max-content;
+    padding: 0.25rem 0.75rem;
+    font-size: 0.875rem;
+    visibility: hidden;
+    content: attr(data-time-period);
+    background-color: #fff;
+    border-radius: 9999px;
+    opacity: 0;
+    transition:
+      visibility,
+      opacity,
+      300ms ease-in-out;
+    transform: translateY(-50%);
+  }
+
+  &:hover::after {
+    visibility: visible;
+    opacity: 1;
+  }
+}
+
+.pagination {
+  display: flex;
+  gap: theme('gap.2');
+  align-items: center;
+  justify-content: space-between;
+  padding: theme('padding.4');
+
+  button[type='button'] {
+    padding: theme('spacing.3') theme('spacing.4');
+    font-size: theme('fontSize.sm');
+    font-weight: theme('fontWeight.semibold');
+    line-height: theme('fontSize.sm[0]');
+    color: theme('colors.blue.500');
+    background-color: theme('colors.blue.50');
+    border: 1px solid theme('colors.blue.400');
+    border-radius: theme('borderRadius.md');
+  }
+}
+
+.pagination-numbers {
+  display: flex;
+  gap: theme('gap.2');
+  align-items: center;
+  height: theme('height.full');
+
+  > span {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: theme('spacing.3') theme('spacing.4');
+    font-size: theme('fontSize.sm');
+    font-weight: theme('fontWeight.semibold');
+    line-height: theme('fontSize.sm[0]');
+    color: theme('colors.blue.500');
+    background-color: theme('colors.blue.50');
+    border: 1px solid theme('colors.blue.400');
+    border-radius: theme('borderRadius.md');
+  }
 }
