Create 'pagination-button' class

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -65,7 +65,7 @@ interface DataTypes {
       </div>
 
       <div class="pagination">
-        <button type="button">Previous</button>
+        <button class="pagination-button" type="button">Previous</button>
 
         <div class="pagination-numbers">
           <span>1</span>
@@ -73,7 +73,7 @@ interface DataTypes {
           <span>3</span>
         </div>
 
-        <button type="button">Next</button>
+        <button class="pagination-button" type="button">Next</button>
       </div>
     </div>
   </div>
