--- a/src/styles/_components.scss
+++ b/src/styles/_components.scss
@@ -74,6 +74,7 @@ tr > td:not(:first-child) {
   align-items: center;
   justify-content: space-between;
   padding: theme('padding.4');
+  background-color: theme('colors.white');
 }
 
 .pagination-button {
